--- a/css/main.css
+++ b/css/main.css
@@ -2188,7 +2188,7 @@ hr {
   line-height: 1;
   font-weight: 400;
   margin: 0;
-  color: inherit;
+  color: #ffffff;
 }
 
 .section.main-slider .slide-titles .title .title-inner {
