--- a/css/main.css
+++ b/css/main.css
@@ -2189,6 +2189,7 @@ hr {
   font-weight: 400;
   margin: 0;
   color: #ffffff;
+  text-shadow: 0px 0px 10px #21202e;
 }
 
 .section.main-slider .slide-titles .title .title-inner {
