--- a/css/main.css
+++ b/css/main.css
@@ -2177,6 +2177,7 @@ hr {
 .section.main-slider .slide-titles .subtitle {
   font-size: 25px;
   font-weight: 900;
+  text-shadow: 0px 0px 3px #ffffff;
 }
 
 .section.main-slider .slide-titles .title {
