--- a/css/main.css
+++ b/css/main.css
@@ -2177,7 +2177,7 @@ hr {
 .section.main-slider .slide-titles .subtitle {
   font-size: 25px;
   font-weight: 900;
-  text-shadow: 0px 0px 7px #ffffff;
+  text-shadow: 0px 0px 7px #594e9b;
 }
 
 .section.main-slider .slide-titles .title {
@@ -2190,7 +2190,7 @@ hr {
   font-weight: 400;
   margin: 0;
   color: #ffffff;
-  text-shadow: 0px 0px 10px #21202e;
+  text-shadow: 0px 0px 10px #594e9b;
 }
 
 .section.main-slider .slide-titles .title .title-inner {
