--- a/css/main.css
+++ b/css/main.css
@@ -2522,6 +2522,7 @@ hr {
   font-weight: 400;
   margin: 0;
   color: inherit;
+  text-shadow: 0px 0px 10px #594e9b;
 }
 
 .section.full-slider .slide-titles .title a {
